--- a/.ci-operator.yaml
+++ b/.ci-operator.yaml
@@ -1,3 +1,4 @@
-project_image:
-  context_dir: .
-  dockerfile_path: base.Dockerfile
+build_root_image:
+  name: release
+  namespace: openshift
+  tag: rhel-8-release-golang-1.17-openshift-4.10
