Protect Global Copied CSVs in the openshift namespace
Problem: After disabling Copied CSVs, the openshift console can no
longer communicate to users which operators are available globally
across the cluster.

Solution: Configure OLM to ensure that Copied CSVs for operators scoped
to All Namespaces appear in the openshift namespace. Update the OLM
manifests to include RBAC for authenticated users to view CSVs in this
namespace.

--- a/manifests/0000_50_olm_07-olm-operator.deployment.ibm-cloud-managed.yaml
+++ b/manifests/0000_50_olm_07-olm-operator.deployment.ibm-cloud-managed.yaml
@@ -53,6 +53,8 @@ spec:
             - /srv-cert/tls.key
             - --client-ca
             - /profile-collector-cert/tls.crt
+            - --protectedCopiedCSVNamespaces
+            - openshift
           image: quay.io/operator-framework/olm@sha256:de396b540b82219812061d0d753440d5655250c621c753ed1dc67d6154741607
           imagePullPolicy: IfNotPresent
           ports:
