Makefile: Remove the -v go mod tidy flag to fix the verify check (#262)
Signed-off-by: timflannagan <timflannagan@gmail.com>
Upstream-repository: api
Upstream-commit: 72295edd2bb11d414a1db6d6643fe3f3918c5ae4

--- a/staging/api/Makefile
+++ b/staging/api/Makefile
@@ -42,7 +42,8 @@ format: ## Format the source code
 	$(Q)go fmt $(PKGS)
 
 tidy: ## Update dependencies
-	$(Q)go mod tidy -v
+	$(Q)go mod tidy
+	$(Q)go mod vendor
 	$(Q)go mod verify
 
 clean: ## Clean up the build artifacts
